--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <p>
       Siteme hoşgeldiniz.Kanalıma abone olun Ve bildirimi aç.
-      <a href="erenyoutubekanali.glitch.me">Bildirimi Aç</a>
+      <a href="erenyoutubekanali.glitch.me"></a>
       Eğer videolardan haberdar olmak için abone olabilirsin.
       <a href="https://youtube.com/channel/UCvSTwCK_nn6OlcRXi84YUuw"
         >Abone ol</a
